# component-ceps

./: .flake8  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.github/workflows/: push.yml
component_config/: component_long_description.md  component_short_description.md  configSchema.json
scripts/: build_n_test.sh  profile_vcr_memory.py
src/: component.py  csv_tools.py
src/ceps/: __init__.py  client.py  endpoint_columns.json
tests/: test_functional.py  test_manifest_consistency.py
tests/functional/01_generation_DY/source/data/: config.json  output_snapshot.json
tests/functional/02_generation_HR/source/data/: config.json
tests/functional/03_generation_QH/source/data/: config.json  output_snapshot.json
tests/functional/04_generation_MI/source/data/: config.json  output_snapshot.json
tests/functional/05_generation_plan_DY/source/data/: config.json  output_snapshot.json
tests/functional/06_generation_plan_HR/source/data/: config.json  output_snapshot.json
tests/functional/07_generation_plan_QH/source/data/: config.json  output_snapshot.json
tests/functional/08_generation_plan_MI/source/data/: config.json  output_snapshot.json
tests/functional/09_generation_res_DY/source/data/: config.json  output_snapshot.json
tests/functional/10_generation_res_HR/source/data/: config.json  output_snapshot.json
tests/functional/11_generation_res_QH/source/data/: config.json  output_snapshot.json
tests/functional/12_generation_res_MI/source/data/: config.json  output_snapshot.json
tests/setup/: configs.json
(+110 files in other folders)
