[project]
name = "component-ceps"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "keboola.component>=1.11.0",
    "keboola.utils==1.1.0",
    "zeep>=4.2.1",
    "requests==2.27.1",
    "xmltodict==0.12.0",
]

[dependency-groups]
dev = [
    "mock==4.0.3",
    "pytest",
    "ruff",
    "freezegun>=1.5.5,<2",
    "keboola.datadirtest>=2.0.0",
    "keboola.vcr>=0.1.1",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I", "UP"]
